<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Product4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="259dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:srcCompat="@drawable/pc_bundle4" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:autoSizeTextType="uniform"
                android:text="@string/product_name4"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/product_price4"
                android:textColor="@color/price_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/product_specification4"
                android:textColor="@color/label_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/processor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:autoSizeTextType="uniform"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text="@string/product_processor4"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/graphicCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:autoSizeTextType="uniform"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text="@string/product_graphic4"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/ramSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:autoSizeTextType="uniform"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text="@string/product_memory4"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/storageCapacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:autoSizeTextType="uniform"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text="@string/product_storage4"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/operatingSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:autoSizeTextType="uniform"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text="@string/product_system4"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:autoSizeTextType="uniform"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text="@string/product_monitor4"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/productInclusion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:autoSizeTextType="uniform"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text="@string/product_inclusion4"
                android:textSize="16sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/design_default_color_error"
                    android:text="@string/app_back" />

                <Button
                    android:id="@+id/btnHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/label_color"
                    android:text="@string/app_home" />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/design_default_color_error"
                    android:text="@string/app_next" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>