<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_title"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgProduct1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="29dp"
                    app:srcCompat="@drawable/pc_bundle1" />

                <TextView
                    android:id="@+id/productName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/product_name1"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgProduct2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="29dp"
                    app:srcCompat="@drawable/pc_bundle2" />

                <TextView
                    android:id="@+id/productName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/product_name2"
                    android:textAlignment="center" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgProduct3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="29dp"
                    app:srcCompat="@drawable/pc_bundle3" />

                <TextView
                    android:id="@+id/productName3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/product_name3"
                    android:textAlignment="center" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgProduct4"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="29dp"
                    app:srcCompat="@drawable/pc_bundle4" />

                <TextView
                    android:id="@+id/productName4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/product_name4"
                    android:textAlignment="center" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgProduct5"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="29dp"
                    app:srcCompat="@drawable/pc_bundle5" />

                <TextView
                    android:id="@+id/productName5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/product_name5"
                    android:textAlignment="center" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>